--- a/.travis.yml
+++ b/.travis.yml
@@ -26,9 +26,9 @@ matrix:
     - python: 3.7
       stage: deploy
       install:
-        - python -m pip install twine
+        - python -m pip install flit twine
       script:
-        - python setup.py sdist bdist_wheel
+        - flit build
         - python -m twine upload dist/* -u ${PYPI_USERNAME} -p ${PYPI_PASSWORD} --skip-existing
 
   allow_failures:
